Fixes for DE17448, DE17450, DE17455 - Desktop Waiting Room alignment fixes.

--- a/docroot/css/site/global/structure.css
+++ b/docroot/css/site/global/structure.css
@@ -736,6 +736,21 @@ iframe { display: none !important; }
   float: none;
   margin-bottom: 0;
 }
+#halfWaitingRoom{
+   padding: 1.5% 0;
+   box-sizing: border-box;
+}
+
+#halfWaitingRoom .waitingRoomMessageBlock{
+  height: 100%;
+  top: 0;
+  padding: 4% 36px;
+  box-sizing: border-box;
+  display: flex;
+}
+#halfWaitingRoom .waitingRoomMessageBlock .waitingroom-logo{
+	margin-bottom: 33px;
+}
 /*waiting room bg late load image issue fix end*/
 .conference-waiting-room{
  display:none;
